css: fixed invisible hightlighted text when the window is unfocused
Use a darker variant of the theme color instead of a
fixed value.

--- a/gthumb/resources/gthumb.css
+++ b/gthumb/resources/gthumb.css
@@ -124,7 +124,7 @@ GtkScrolledWindow.comment.undershoot {
 }
 
 .highlighted-text:backdrop {
-	color: #333333;
+	color: darker(currentColor);
 }
 
 /* -- extension list in the preferences dialog -- */
